--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
           href="https://github.com/ViacheslavVolyanuk"
           >&copy;</a
         >
+        Click on map to add workout
       </p>
     </div>
 
