--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <a
           class="twitter-link"
           target="_blank"
-          href="https://github.com/ViacheslavVolyanuk"
+          href="https://github.com/ViacheslavVolianiuk"
           >&copy;</a
         >
         Click on map to add workout
